tests/testcases/invalid/semantic/25_return_outside_function.ciel
// Error: 'return' statement not within a function
int x = 5;

return 10;  // Error: return at global scope
